Fixed iframe size on mobile.

--- a/shared/css/helpers.css
+++ b/shared/css/helpers.css
@@ -48,6 +48,22 @@
   cursor: pointer;
 }
 
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .mx-auto {
   margin: 0 auto;
 }
